# Neurips2025_Non-Sampling_Parameter_Estimation_for_Gravitational_Waves_Physics

./: .gitignore  README.md  env.sh  myenv.yaml  neurips2025.yaml  pyproject.toml
configs/: dho_dataset_gaussian_pink.yaml  dho_dataset_gaussian_smear.yaml  dho_dataset_gaussian_white.yaml  sg_dataset_gaussian_pink.yaml  sg_dataset_gaussian_smear.yaml  sg_dataset_gaussian_white.yaml
modules/: toy_data.py  toy_functions.py
saved_models/DHO/: embedding.CNN.SHO.250828032239.pink.noise.sigma0.4.pt  flow.CNN.SHO.embed250828032239.250828153118.pink.noise.sigma0.4.pt  model.SSM.SHO.NLLGaussian.250827165455.pink.noise.sigma0.4.pt  model.SSM.SHO.Quantile.250828225103.pink.noise.sigma0.4.pt
saved_models/SG/: embedding.CNN.SineGaussian.250828030459.pink.noise.sigma0.4.pt  flow.CNN.SineGaussian.embed250828030459.250828163858.pink.noise.sigma0.4.pt  model.SSM.SineGaussian.NLLGaussian.250828213816.pink.noise.sigma0.4.pt  model.SSM.SineGaussian.Quantile.250828225108.pink.noise.sigma0.4.pt
scripts/: create_toy_datasets.py
src/: toy_training.py
src/datasets/: create_data.py  data_structures.py  load_priors.py
src/functions/: toy_functions.py
src/neurips2025_ml4ps_ssm_gw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  create_toy_datasets.py  init_setup.sh
